SERVER-55762 Fix secondaryDelaySecs upgrade FCV checks when 4.9 becomes last-continuous

(cherry picked from commit 73721271e736cc97d30cf2fa177a2f53884b82f6)